# my-blockchain-project

./: README.md  docker-compose.yaml
config/: genesis.json  node.yaml  tokenomics.yaml
contracts/: SimpleToken.wat
frontend/: app.py  index.html  mobile.css  script.js  style.css
frontend/src/: App.jsx  vite.config.js
l1_golang/: Dockerfile  go.mod  go.sum
l1_golang/cmd/node/: main.go  real_node.go
l1_golang/internal/blockchain/: block.go  chain.go  chain_manager.go  real_block.go
l1_golang/internal/consensus/: povc_real.go
l1_golang/internal/consescus/: povc.go
l1_golang/internal/node/: config.go  node.go
l1_golang/internal/p2p/: network.go  peer.go
l1_golang/internal/wallet/: wallet.go
l2_rust/: Cargo.toml  Dockerfile
l2_rust/crypto-engine/: Cargo.toml
l2_rust/nusa-vm/: Cargo.toml
l2_rust/nusa-vm/src/: lib.rs  main.rs
l2_rust/src/: lib.rs  main.rs
l3_python/: Dockerfile  requirements.txt
l3_python/ai_engine/: main.py  main_fixed.py  povc.py
scripts/: clean-build.sh  deploy.sh  generate-wallet.py  setup.sh  simulate_economy.py
