[package]
name = "nusa-vm"
version = "0.1.0"
edition = "2021"

[dependencies]
wasmtime = "15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
log = "0.4"
anyhow = "1.0"

[[bin]]
name = "nusa-vm"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1